# Atlas_Atthil

./: README.md  atlas.db  pyproject.toml  requirements.txt
app/: main.py
app/api/: campaigns.py  quests.py  router.py
app/core/: config.py
app/data_pipeline/: download.py  normalize.py
app/data_pipeline/builder/: __init__.py  atlas_builder.py  pipeline.py  statistics.py
app/data_pipeline/cache/: cache_manager.py
app/data_pipeline/commands/: __init__.py  build_atlas.py
app/data_pipeline/exporters/: __init__.py  atlas_exporter.py  json_exporter.py
app/data_pipeline/models/: __init__.py  atlas_map.py  atlas_npc.py  atlas_objective.py  atlas_prerequisite.py  (+3 more)
app/database/: base_model.py  session.py
app/enums/: quest_type.py
app/imports/: import_dofus_des_glaces.py  json_importer.py
app/optimizer/: graph_builder.py  quest_engine.py  quest_graph.py  quest_node.py  quest_score.py  quest_scorer.py
app/repositories/: campaign_repository.py  quest_dependency_repository.py  quest_repository.py
app/services/: campaign_service.py  graph_service.py  quest_service.py
atlas_atthil.egg-info/: PKG-INFO  SOURCES.txt
backend/: main.py
backend/api/: router.py
backend/core/: config.py
backend/database/: session.py
backend/models/: campaign.py
data/campaigns/: dofus_des_glaces.json
data/raw/: quests.json
docs/: ARCHITECTURE.md  DATABASE.md
scripts/: inspect_dofusdb.py  seed_database.py  test_depedency.py  test_engine.py  test_graph.py
tests/: test_graph_service.py  test_quest_engine.py  test_quest_engine_dependencies.py  test_quest_graph.py
(+22 files in other folders)
