[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-atthil"
version = "0.1.0"
description = "Atlas d'Atthil"
requires-python = ">=3.13"

dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "alembic",
    "pydantic",
]

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
pythonpath = ["."]